Tue Dec 28 18:58:21 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>

	* htlib/String.cc: String::lowercase(), String::uppercase()
	support for national character added.
	
Mon Dec 27 22:17:48 1999  Loic Dachary  <loic@ceic.com>

	* htdig/htdig.cc (main): change '\r\n' to "\r\n"

	* Makefile.config,db/dist/Makefile.in: rename libdb to libhtdb to
	  prevent conflicts with installed libdb.

	* db/dist/Makefile.in: do not install documentation nor binary
	  utilities (db_dump & al) since they are replaced by htdb binaries
	  (htdump & al).

	* db/dist/Makefile.in (prefix): prepend $(DESTDIR) to prefix
	  to support make DESTDIR=/staging install for binary distribution
	  packages generation.

	* configure.in: use AC_FUNC_ALLOCA to check for alloca. Used 
	  in regex and test/dbbench.cc only but definitely a usefull 
	  feature to have.

Thu Dec 23 11:10:24 1999  Marcel Bosc  <bosc@ceic.com>

	* htcommon/defaults.cc: set wordlist_cache_size default to 10Meg

	* db/mp: removed some debuging messages 
	
	* htword/WordList.cc: added warning if no cache

	* test/word.cc: added cache 
	
	* htlib/HtTime.h: added ifdefs for portable time.h sys/time.h
	
Tue Dec 21 23:33:06 1999  Loic Dachary  <loic@ceic.com>

	* htdoc/attrs.html,cf_by*.html: regenerate to include 
	  wordlist_wordkey_description attribute
	
	* htcommon/Makefile.am: Add AM_LFLAGS = -L and AM_YFLAGS = -l to
	  prevent #line generation because it confuses the dependencies
	  generator of GCC if configure run out of source tree.

	* configure.in: remove --with-key option. Not needed since
	  word description now dynamic. Destroyed WordKey.h if
	  specified.

	* htword/Makefile.am: remove commented lines for WordKey.h
	  generation.

Tue Dec 21 18:18:01 1999  Marcel Bosc  <bosc@ceic.com>

	* htword: added code for benchmarking

Mon Dec 20 17:59:15 1999  Marcel Bosc  <bosc@ceic.com>

	* WordKey: Made the key structure dynamic: Changing the
	key structure used to imply recompiling the htword library.