@@ -2,6 +2,8 @@ Tue Dec 28 18:58:21 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>
 
 	* htlib/String.cc: String::lowercase(), String::uppercase()
 	support for national character added.
+
+	* htfuzzy/Prefix.cc: method "prefix" works now.
 	
 Mon Dec 27 22:17:48 1999  Loic Dachary  <loic@ceic.com>
 
